--- a/sourse/includes/head.pug
+++ b/sourse/includes/head.pug
@@ -5,6 +5,7 @@ head
     meta(name="viewport" content="width=device-width, height=device-height")
     meta(name="format-detection" content="telephone=no")
     link(rel="stylesheet", href="../css/bootstrap.min.css")
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css')
     link(rel="stylesheet", href="../css/main.css")
     link(rel="stylesheet", href="../css/media.css")
     script(src="../js/jquery-3.2.1.min.js")
