--- a/sourse/includes/header.html
+++ b/sourse/includes/header.html
@@ -1,6 +1,6 @@
 
-<header>
-  <div class="container-fluid">
+<header class="header" id="header">
+  <div class="container">
     <div class="header-block">
       <div class="header-logo"><img src="../images/header-logo.png" alt="logo"/></div>
       <div class="header-menu">
