--- a/sourse/includes/header.pug
+++ b/sourse/includes/header.pug
@@ -1,5 +1,5 @@
-header
-  .container-fluid
+header.header#header
+  .container
     .header-block
       .header-logo
         img(src="../images/header-logo.png", alt="logo")
