--- a/sourse/html/index.pug
+++ b/sourse/html/index.pug
@@ -4,38 +4,67 @@ block title
   title New-landing
 
 block content
-  section.section-home
-    .container-fluid
-      .row
-        .col-md-3
-          .sidebar
-        .col-md-9
-          .home-content
-            .row
-              .col-md-6
-                h1 Your next interactive experience
-                .col-md-3
-                  button.main-btn
-                    p hire us
-                    i.fa.fa-long-arrow-right(aria-hidden='true')
-              .col-md-6
-                img(src="../images/home-img.png", alt="")
-          .home-info
-            .row
-              .col-md-4
-                .info-block
-                  h5 Metiew & Smith
-                  p Lorem ipsum dolor sit amet consectetur adipisicing elit. A, et?
-              .col-md-4
-                .info-block
-                  h5 Fantasy interactive
-                  p Lorem ipsum dolor sit amet consectetur adipisicing elit. At, rerum!
-              .col-md-4
-                .info-block
-                  h5 Paul & shark
-                  p Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, a!
+  #fullpage
+    section.section.active.section-home
+      .container-fluid
+        .row
+          .col-md-3
+            .sidebar#left-sidebar
+              ul#menu.side-list
+                li.list-tab.is-active
+                  a(href="#firstPage") 
+                    span Home
+                li.list-tab
+                  a(href="#secondPage") 
+                    span Works
+                li.list-tab
+                  a(href="#") 
+                    span About
+                li.list-tab
+                  a(href="#") 
+                    span Contact
+                li.list-tab
+                  a(href="#") 
+                    span Hire us
+          .col-md-9
+            .home-content
+              .row
+                .col-md-6
+                  h1 Your next interactive experience
+                  .col-md-3
+                    button.main-btn
+                      p hire us
+                      i.fa.fa-long-arrow-right(aria-hidden='true')
+                .col-md-6
+                  img(src="../images/home-img.png", alt="")
+            .home-info
+              .row
+                .col-md-4
+                  .info-block
+                    h5 Metiew & Smith
+                    p Lorem ipsum dolor sit amet consectetur adipisicing elit. A, et?
+                .col-md-4
+                  .info-block
+                    h5 Fantasy interactive
+                    p Lorem ipsum dolor sit amet consectetur adipisicing elit. At, rerum!
+                .col-md-4
+                  .info-block
+                    h5 Paul & shark
+                    p Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, a!
 
-        
-  section.section-content
+    section.section.section-works
+      .container-fluid
+        .row
+          .col-md-9.col-md-offset-3
+            .owl-carousel.owl-theme
+              div  Your Content 
+              div  Your Content 
+              div  Your Content 
+              div  Your Content 
+              div  Your Content 
+              div  Your Content 
+              div  Your Content 
+
+
         
 block scripts
