--- a/sourse/includes/head.pug
+++ b/sourse/includes/head.pug
@@ -8,6 +8,13 @@ head
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css')
     link(rel="stylesheet", href="../css/main.css")
     link(rel="stylesheet", href="../css/media.css")
+    link(rel="stylesheet", href="../css/jquery.fullpage.min.css")
+    link(rel='stylesheet', href='../css/owlcarousel/owl.carousel.min.css')
+    link(rel='stylesheet', href='../css/owlcarousel/owl.theme.default.min.css')
+
     script(src="../js/jquery-3.2.1.min.js")
     script(src="../js/bootstrap.min.js")
+    script(src="../js/owlcarousel/owl.carousel.min.js")
+    script(src="../js/jquery.fullpage.min.js")
     script(src="../js/common.js")
+    script(src="../js/side-list.js")
